weather on home screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     package="com.example.ass3"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- Add this line to declare the internet permission -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -27,12 +30,13 @@
         <activity android:name=".SignupActivity"></activity>
 
         <!-- Make sure MapActivity is declared -->
-        <activity android:name=".MapActivity" />
+        <activity android:name=".HomeActivity" />
 
         <!-- Mapbox access token -->
         <meta-data
             android:name="com.mapbox.access_token"
             android:value="pk.eyJ1Ijoiendhbjk4IiwiYSI6ImNsaGh0OHZ6NzAxN3gzZGxnMnF5NmM4OW0ifQ.sNz1xIUNpvE-ANrmcpWIyw" />
+
 
 
     </application>
