--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,11 +26,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
 }
+
 
 dependencies {
 
@@ -68,8 +70,7 @@ dependencies {
     implementation 'com.mapbox.mapboxsdk:mapbox-sdk-services:5.2.0'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-annotation-v9:0.9.0'
 
-
-
+    implementation 'com.google.android.material:material:1.4.0'
 
 
 
