--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,12 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.4.0'
 
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 
 
 }
