--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Ass3"
+        android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
+
 
         <!-- Make sure LoginActivity is declared and has the correct intent-filter -->
         <activity
@@ -37,6 +39,8 @@
             android:name="com.mapbox.access_token"
             android:value="pk.eyJ1Ijoiendhbjk4IiwiYSI6ImNsaGh0OHZ6NzAxN3gzZGxnMnF5NmM4OW0ifQ.sNz1xIUNpvE-ANrmcpWIyw" />
 
+        <activity android:name=".FoodActivity"></activity>
+        <activity android:name=".ExerciseActivity"></activity>
 
 
     </application>
