--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,10 @@
 
     <!-- Add this line to declare the internet permission -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+
 
     <application
         android:allowBackup="true"
@@ -20,7 +24,7 @@
 
         <!-- Make sure LoginActivity is declared and has the correct intent-filter -->
         <activity
-            android:name=".LoginActivity"
+            android:name=".TitleActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,19 +32,26 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".LoginActivity"></activity>
+
         <!-- Make sure SignupActivity is declared -->
         <activity android:name=".SignupActivity"></activity>
 
         <!-- Make sure MapActivity is declared -->
-        <activity android:name=".HomeActivity" />
+        <activity android:name=".MapActivity"></activity>
 
         <!-- Mapbox access token -->
         <meta-data
             android:name="com.mapbox.access_token"
             android:value="pk.eyJ1Ijoiendhbjk4IiwiYSI6ImNsaGh0OHZ6NzAxN3gzZGxnMnF5NmM4OW0ifQ.sNz1xIUNpvE-ANrmcpWIyw" />
 
+        <activity android:name=".HomeActivity"></activity>
+        <activity android:name=".WeightActivity"></activity>
+
         <activity android:name=".FoodActivity"></activity>
         <activity android:name=".ExerciseActivity"></activity>
+
+
 
 
     </application>
